feat: create article and footer

--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout</title>
-
+    <title>Layout</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -23,26 +21,26 @@
 
             <!-- Barra lateral -->
             <aside class="aside-header">
-
+                
             </aside>
         </header>
 
         <!-- Conteúdo principal da página -->
         <article class="article-main">
             <section class="section-article">
-
+                <!-- Conteúdo principal do artigo -->
             </section>
 
             <!-- Barra lateral da página -->
             <aside class="aside-main">
                 <!-- Barra lateral 1 -->
                 <section class="section-aside">
-
+                    <!-- Conteúdo lateral -->
                 </section>
 
                 <!-- Barra lateral 2 -->
                 <section class="section-aside">
-
+                    <!-- Conteúdo lateral -->
                 </section>
             </aside>
 
@@ -52,22 +50,21 @@
         <footer class="footer-main">
             <!-- Rodapé 1 -->
             <section class="section-footer">
-
+                <!-- Conteúdo rodapé -->
             </section>
 
             <!-- Rodapé 2 -->
             <section class="section-footer">
-
+                <!-- Conteúdo rodapé -->
             </section>
 
             <!-- Rodapé 3 -->
             <section class="section-footer">
-
+                <!-- Conteúdo rodapé -->
             </section>
         </footer>
 
     </main>
-
 </body>
 
 </html>
